tests/baselines/reference/separateCompilationAmbientConstEnum.errors.txt
tests/cases/compiler/separateCompilationAmbientConstEnum.ts(3,20): error TS1209: Ambient const enums are not allowed when the '--separateCompilation' flag is provided.


==== tests/cases/compiler/separateCompilationAmbientConstEnum.ts (1 errors) ====
    
    
    declare const enum E { X = 1}
                       ~
!!! error TS1209: Ambient const enums are not allowed when the '--separateCompilation' flag is provided.
    export var y;